# aqi-control-open-env

./: .dockerignore  .gitignore  Dockerfile  LICENSE  MANIFEST.in  PRE_SUBMISSION_CHECKLIST.md  README.md  SPACE_GUIDE.md  TECHNICAL_SPEC.md  __init__.py  client.py  inference.py  models.py  openenv.yaml  pyproject.toml  test_grader_scores.py  test_http.py  test_serialization.py  test_smoke.py
.github/workflows/: validate_openenv.yml
data/: bengaluru_winter.json  chandigarh_winter.json  city_profiles.json  delhi_winter.json  kanpur_winter.json  kolkata_winter.json  lucknow_winter.json  mumbai_winter.json  patna_winter.json
env/: __init__.py  graders.py  grap.py  health.py  politics.py  simulator.py  transport.py  weather.py
scripts/: check_packaging.py  emit_inference_logs.py  validate_submission_local.py
server/: __init__.py  app.py  aqi_environment.py
