[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "openenv-aqi-control-env"
version = "0.1.0"
description = "City-level AQI policy controller benchmark for OpenEnv — Indian NCAP cities"
requires-python = ">=3.10"
dependencies = [
    "openenv-core[core]>=0.2.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=4.0.0",
]
inference = [
    "openai>=1.0.0",
    "requests>=2.25.0",
]

[project.scripts]
server = "server.app:main"

[tool.setuptools]
include-package-data = true
packages = ["env", "server"]
py-modules = ["models", "client", "inference"]

[tool.setuptools.package-data]
"*" = ["data/**/*.json", "openenv.yaml"]